fixing alignment issues on homepage

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,10 +4,10 @@
 }
 
 
-aside {
+/* aside {
   flex: 1;
   background-color: #b9c6ae;
   padding: 80px;
   text-align: left;
   float: left;
-}
+} */
